<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadScreen">

    <Button
        android:id="@+id/new_backButton2"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/catPawLeft4"
        android:layout_width="207dp"
        android:layout_height="61dp"
        android:layout_marginStart="-30dp"
        android:contentDescription="@string/leftarm"
        app:layout_constraintEnd_toStartOf="@+id/load_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/load_title"
        app:srcCompat="@drawable/catarm_left" />

    <TextView
        android:id="@+id/load_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Saved Cats"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/load_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="What fond memories!"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_title" />

    <ImageView
        android:id="@+id/catPawRight4"
        android:layout_width="207dp"
        android:layout_height="61dp"
        android:layout_marginEnd="-30dp"
        android:contentDescription="@string/rightarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/load_title"
        app:layout_constraintTop_toTopOf="@+id/load_title"
        app:srcCompat="@drawable/catarm_right" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/load_recycler"
        android:layout_width="409dp"
        android:layout_height="576dp"
        app:layout_constraintBottom_toTopOf="@+id/new_backButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>